--- a/CSS/sytlesheet-home.css
+++ b/CSS/sytlesheet-home.css
@@ -5,6 +5,11 @@
     padding: 0;
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
+    color: black;
+}
+
+body::-webkit-scrollbar{
+    display: none;
 }
 
 .homeNavBar{
@@ -15,11 +20,23 @@
 }
 
 .homeNavBar ul{  
+    float:left;
     list-style-type: none;
     padding: 0;
     overflow: hidden;
     background-color: #191919;
+    border-bottom: 1.5px solid grey;
+    margin-left: 2%;
+    margin-right: 1.5%;
+   
 }
+
+
+
+.wallaceHome{
+    margin-right: 955px;
+}
+
 
 .homeNavBar li{
     float: left;
@@ -41,10 +58,63 @@ header{
     text-align: center;
 }
 
+
 body{
     background-color: #191919;
 }
 
+#arrow:hover{
+    transform: scale(1.1);
+    cursor: pointer;
+}
+
 .unicorn{
     text-align: center;
+    animation: fadein 3s;
 }
+
+.flex-container{
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 65px;
+    justify-content: center;
+}
+
+.flex-container div{
+    background:transparent;
+    width: 340px;
+    height: 325px;
+    margin-left: 80px;
+    margin-right: 80px;
+    margin-bottom: 100px;
+    text-align: center;
+    line-height: 75px;
+    font-size: 30px;
+    border: 1.5px solid grey;
+    overflow: hidden;
+}
+
+.flex-container div:hover{
+     border: 1.5px solid white;
+}
+
+.flex-container div img{
+    max-width: 100%;
+    transition: all .6s ease-in-out;
+}
+
+.flex-container div:hover img{
+    transform: scale(1.05);
+}
+
+
+
+p{
+    color: #c52026;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
