--- a/CSS/sytlesheet-home.css
+++ b/CSS/sytlesheet-home.css
@@ -13,33 +13,39 @@ body::-webkit-scrollbar{
 }
 
 .homeNavBar{
-    margin: 0 auto;
     position: sticky;
     top:0;
-
 }
 
 .homeNavBar ul{  
-    float:left;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
     list-style-type: none;
     padding: 0;
     overflow: hidden;
     background-color: #191919;
     border-bottom: 1.5px solid grey;
     margin-left: 2%;
-    margin-right: 1.5%;
+    margin-right: 2%;
    
 }
 
 
-.wallaceHome{
-    margin-right: 715px;
+#wallaceHome{
+    margin-right: auto;
 }
 
-
-.homeNavBar li{
-    float: left;
+#wallaceHome a{
+    padding:6px 0 0px 16px;
 }
+
+#wallaceHome a:hover{
+    background-color: #191919;
+    animation: hvr-icon-pop .3s;
+    
+}
+
 
 .homeNavBar li a{
     display: block;
@@ -48,6 +54,7 @@ body::-webkit-scrollbar{
     padding: 15px 16px 15px 16px;
     text-decoration: none;
 }
+
 
 .homeNavBar li a:hover{
     background-color: #4b2526;
@@ -62,6 +69,12 @@ body{
     background-color: #191919;
 }
 
+#arrow{
+    float: right;
+    margin-right: .5%;
+    margin-top: .5%;
+}
+
 #arrow:hover{
     transform: scale(1.15);
     cursor: pointer;
@@ -73,13 +86,13 @@ body{
 
 .unicorn{
     text-align: center;
-    animation: fadein 3s;
+    
 }
 
 .flex-container{
     display: flex;
     flex-wrap: wrap;
-    margin-top: 150px;
+    margin-top: 240px;
     justify-content: center;
 }
 
@@ -152,12 +165,18 @@ footer{
     background: transparent;
     color: #c52026;
     font-size: 10px;
-    margin: 30% 40% 0 40%;
     text-align: center;
 }
+
 
 @keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
 }
 
+
+@keyframes hvr-icon-pop {
+  50% {
+    transform: scale(1.1);
+  }
+}
