--- a/CSS/sytlesheet-home.css
+++ b/CSS/sytlesheet-home.css
@@ -447,21 +447,6 @@ footer{
     color: #f1f1f1;
 }
 
-#wrongAnswer{
-    visibility: hidden;
-}
-
-#wrongAnswer{
-    color: grey;
-    transition: all .2s ease-in-out;
-}
-
-#wrongAnswer:hover{
-    transform: scale(1.1);
-    cursor: pointer;
-    color: #f1f1f1;
-}
-
 
 #submit{
     display: flex;
@@ -548,8 +533,16 @@ footer{
     height:59%;
     top:20%;
 }
-
     
+}
+
+/*Make certain text unselectable*/
+.unselectable {
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 
