--- a/CSS/sytlesheet-home.css
+++ b/CSS/sytlesheet-home.css
@@ -298,6 +298,11 @@ footer{
     font-weight:normal;
 }
 
+em{
+    font-size: 15px;
+    color: grey;
+}
+
 /*Joi page content styles*/
 /*---------------------------------------------------*/
 .purchaseJoi{
