--- a/CSS/sytlesheet-home.css
+++ b/CSS/sytlesheet-home.css
@@ -227,6 +227,7 @@ footer{
     top: 20%;
     opacity: 0.5;
     transition-duration: .8s;
+    z-index: 1;
     
 }
 
@@ -234,6 +235,7 @@ footer{
     transition: all .4s ease-in-out;
     opacity: 1;
     cursor: pointer;
+    
 }
 
 
@@ -255,6 +257,7 @@ footer{
 #mySideBar{
     height:67%;
     top:20%;
+    z-index: 1;
 }
 
 /*NewsPage content style*/
@@ -506,13 +509,173 @@ em{
     display: flex;
     justify-content: flex-start;
     margin-top: 18%;
-    margin-bottom: 37%;
+    margin-bottom: 30%;
     margin-left: 25%;
     margin-right: 25%;
     border: 2px outset #F1F1F1;
     border-radius: 1px;
     padding: 25px;
 }
+
+/*Page Footer Stylings*/
+/*-------------------------------------------------------------------------------*/
+
+/*Homepage Footer*/
+#homePageFooter {
+    
+    background-image: url(../images/footerImage.jpg);
+    background-position: bottom; 
+    background-repeat: no-repeat; 
+    background-size: 100%; 
+    position:relative; 
+    display:block; 
+    height:650px;
+    
+    text-align: center;
+    
+}
+
+#homePageFooter::before {
+    display:block;
+    width:100%;
+    height:100%;
+    background: rgb(25,25,25);
+    background: linear-gradient(180deg, rgba(25,25,25,1) 0%, rgba(25,25,25,0.75) 65%, rgba(25,25,25,0) 100%);
+    position:absolute;
+    z-index: 0;
+    content: "";
+
+}
+
+
+#homePageFooter a{
+    color: grey;
+    text-decoration: none;
+    font-size: 13px;
+}
+
+#homePageFooter a:hover{
+    color: #f1f1f1;
+}
+
+#homePageFooter div{
+   
+    z-index: 1;
+    display:block;
+    position:absolute;
+    bottom: 5%;
+    width:100%;
+    
+}
+
+#homePageFooter p{
+    font-size: 13px;
+}
+
+/*Replicant page footer*/
+#replicantTestFooter {
+    
+    background-image: url(../images/footerImage2.jpg);
+    background-position: bottom; 
+    background-repeat: no-repeat; 
+    background-size: 100%; 
+    position:relative; 
+    display:block; 
+    height:650px;
+    
+    text-align: center;
+    
+}
+
+#replicantTestFooter::before {
+    display:block;
+    width:100%;
+    height:100%;
+    background: rgb(25,25,25);
+    background: linear-gradient(180deg, rgba(25,25,25,1) 0%, rgba(25,25,25,0.85) 75%, rgba(25,25,25,0) 100%);
+    position:absolute;
+    z-index: 0;
+    content: "";
+
+}
+
+
+#replicantTestFooter a{
+    color: grey;
+    text-decoration: none;
+    font-size: 13px;
+}
+
+#replicantTestFooter a:hover{
+    color: #f1f1f1;
+}
+
+#replicantTestFooter div{
+   
+    z-index: 1;
+    display:block;
+    position:absolute;
+    bottom: 5%;
+    width:100%;
+    
+}
+
+#replicantTestFooter p{
+    font-size: 13px;
+}
+
+/*About Page footer*/
+#aboutPageFooter {
+    
+    background-image: url(../images/footerImage7.jpg);
+    background-position: bottom; 
+    background-repeat: no-repeat; 
+    background-size: 100%; 
+    position:relative; 
+    display:block; 
+    height:650px;
+    
+    text-align: center;
+    
+}
+
+#aboutPageFooter::before {
+    display:block;
+    width:100%;
+    height:100%;
+    background: rgb(25,25,25);
+    background: linear-gradient(180deg, rgba(25,25,25,1) 0%, rgba(25,25,25,0.85) 75%, rgba(25,25,25,0) 100%);
+    position:absolute;
+    z-index: 0;
+    content: "";
+
+}
+
+
+#aboutPageFooter a{
+    color: grey;
+    text-decoration: none;
+    font-size: 13px;
+}
+
+#aboutPageFooter a:hover{
+    color: #f1f1f1;
+}
+
+#aboutPageFooter div{
+   
+    z-index: 1;
+    display:block;
+    position:absolute;
+    bottom: 5%;
+    width:100%;
+    
+}
+
+#aboutPageFooter p{
+    font-size: 13px;
+}
+
 
 
 /*Animations*/
@@ -564,7 +727,3 @@ em{
     -ms-user-select: none;
     user-select: none;
 }
-
-
-
-
