--- a/CSS/sytlesheet-home.css
+++ b/CSS/sytlesheet-home.css
@@ -301,6 +301,10 @@ footer{
     font-weight:normal;
 }
 
+.newsPageImageAnchor{
+    text-decoration: none;     
+}
+
 em{
     font-size: 15px;
     color: grey;
@@ -509,12 +513,14 @@ em{
     display: flex;
     justify-content: flex-start;
     margin-top: 14%;
-    margin-bottom: 30%;
+    margin-bottom: 20%;
     margin-left: 25%;
     margin-right: 25%;
     border: 2px outset #F1F1F1;
     border-radius: 1px;
     padding: 25px;
+    width: 768px;
+    height: 530px;
 }
 
 /*Page Footer Stylings*/
@@ -591,7 +597,7 @@ em{
     width:100%;
     height:100%;
     background: rgb(25,25,25);
-    background: linear-gradient(180deg, rgba(25,25,25,1) 0%, rgba(25,25,25,0.85) 75%, rgba(25,25,25,0) 100%);
+    background: linear-gradient(180deg, rgba(25,25,25,1) 0%, rgba(25,25,25,0.75) 75%, rgba(25,25,25,0) 110%);
     position:absolute;
     z-index: 0;
     content: "";
@@ -642,7 +648,7 @@ em{
     width:100%;
     height:100%;
     background: rgb(25,25,25);
-    background: linear-gradient(180deg, rgba(25,25,25,1) 0%, rgba(25,25,25,0.85) 75%, rgba(25,25,25,0) 100%);
+    background: linear-gradient(180deg, rgba(25,25,25,1) 0%, rgba(25,25,25,0.75) 75%, rgba(25,25,25,0) 110%);
     position:absolute;
     z-index: 0;
     content: "";
@@ -693,7 +699,7 @@ em{
     width:100%;
     height:100%;
     background: rgb(25,25,25);
-    background: linear-gradient(180deg, rgba(25,25,25,1) 0%, rgba(25,25,25,0.85) 75%, rgba(25,25,25,0) 100%);
+    background: linear-gradient(180deg, rgba(25,25,25,1) 0%, rgba(25,25,25,0.75) 75%, rgba(25,25,25,0) 120%);
     position:absolute;
     z-index: 0;
     content: "";
@@ -744,7 +750,7 @@ em{
     width:100%;
     height:100%;
     background: rgb(25,25,25);
-    background: linear-gradient(180deg, rgba(25,25,25,1) 0%, rgba(25,25,25,0.85) 75%, rgba(25,25,25,0) 100%);
+    background: linear-gradient(180deg, rgba(25,25,25,1) 0%, rgba(25,25,25,0.7) 75%, rgba(25,25,25,0) 100%);
     position:absolute;
     z-index: 0;
     content: "";
@@ -776,11 +782,55 @@ em{
 }
 
 /*news articles styles*/
-h1{
+.newsArticleH1 {
     font-size: 3em;
-    color: #f1f1f1;
+    color: lightgrey;
     padding:10px;
+    margin-left: 3%;
 }
+
+.newsArticleH3{
+    font-size: 1.3em;
+    color: lightgrey;
+    margin-left: 4.2%;
+    margin-top: 1%;
+    
+}
+
+.newsArticleDate{
+    margin-top: 2%;
+    margin-left: 4.2%;
+    padding-left: 4px;
+    border-bottom: 1px solid grey;
+    width:190px;
+    
+}
+
+.newsArticleDate p{
+    font-size: 13px;
+    color:indianred;
+}
+
+.newsArticleImage{
+    
+  object-fit: cover;
+  width: 100%;
+  height: 650px;
+}
+
+.newsPageArticleContainer{
+    display: flex;
+    justify-content: flex-start;
+    margin-top: 1%;
+    margin-bottom: 20%;
+    margin-left: 3%;
+    margin-right: 15%;
+    border-radius: 1px;
+    padding: 20px;
+    width: 65%;
+    height: 800px;
+}
+
 
 /*Animations*/
 @keyframes fadein {
